关于项目名字的更改

--- a/project/package.json
+++ b/project/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "project",
+  "name": "pizza",
   "version": "1.0.0",
   "description": "A Vue.js project",
   "author": "pingzina <1241860821@qq.com>",
