--- a/project/package.json
+++ b/project/package.json
@@ -16,7 +16,9 @@
     "vue": "^2.5.2",
     "vue-resource": "^1.5.1",
     "vue-router": "^3.0.1",
-    "vuex": "^3.1.0"
+    "vuex": "^3.1.0",
+	"express": "^4.17.1",
+    "mysql": "^2.17.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
