--- a/project/package.json
+++ b/project/package.json
@@ -11,14 +11,15 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "express": "^4.17.1",
     "less": "^3.9.0",
     "less-loader": "^4.1.0",
+    "mysql": "^2.17.1",
+    "qs": "^6.8.0",
     "vue": "^2.5.2",
     "vue-resource": "^1.5.1",
     "vue-router": "^3.0.1",
-    "vuex": "^3.1.0",
-    "express": "^4.17.1",
-    "mysql": "^2.17.1"
+    "vuex": "^3.1.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
